; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_dm_pool_close_thin_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_dm_pool_close_thin_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_thin_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dm_pool_close_thin_device(%struct.dm_thin_device* %0) #0 {
  %2 = alloca %struct.dm_thin_device*, align 8
  store %struct.dm_thin_device* %0, %struct.dm_thin_device** %2, align 8
  %3 = load %struct.dm_thin_device*, %struct.dm_thin_device** %2, align 8
  %4 = getelementptr inbounds %struct.dm_thin_device, %struct.dm_thin_device* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = call i32 @down_write(i32* %6)
  %8 = load %struct.dm_thin_device*, %struct.dm_thin_device** %2, align 8
  %9 = call i32 @__close_device(%struct.dm_thin_device* %8)
  %10 = load %struct.dm_thin_device*, %struct.dm_thin_device** %2, align 8
  %11 = getelementptr inbounds %struct.dm_thin_device, %struct.dm_thin_device* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @up_write(i32* %13)
  ret i32 0
}

declare dso_local i32 @down_write(i32*) #1

declare dso_local i32 @__close_device(%struct.dm_thin_device*) #1

declare dso_local i32 @up_write(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
